# ubw

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  LICENSE.blivedm  Readme.md  bhashm.py  config.example.toml  main.py  main.spec  pyproject.toml
bhashm/: __init__.py
blivedm/: handlers.py  models.py
examples/: danmakup.py  elza.py  elza_karin.py  find_elza.py  happy_runner.py  saver.py  shield.py  strange_stalker.py  wocpian.py
misc/: 总督.py
protos/: all.proto
scripts/: create_model.zsh  try_parse_unknown.py
src/appdantic/: __init__.py  actor.py
src/bhashm/: __init__.py  __main__.py  cli.py  config.py  handler.py
src/bilibili/: __init__.py  models.py
src/biligank/: __init__.py  cli.py
src/bliflux/: __init__.py
src/blive_dumpraw/: cli.py  handler.py
src/blive_saver/: __init__.py  cli.py  handler.py
src/blivedm/: __init__.py  _base.py  client.py  handlers.py  models.py  open_live_client.py  tcpclient.py  utils.py  wsclient.py
src/blivedm/models/: __init__.py  _base.py  activity_banner_change_v2.py  admin_shield_keyword.py  anchor_broadcast.py  anchor_ecommerce_status.py  anchor_helper_danmu.py  anchor_lot.py  area_rank_changed.py  benefit_status.py  card_msg.py  combo_end.py  combo_send.py  common_notice_danmaku.py  confirm_auto_follow.py  cut_off.py  danmu_msg.py  dm_interaction.py  entry_effect.py  full_screen_special_effect.py  gift_star_process.py  guard_buy.py  heartbeat.py  interact_word.py  like_info.py  little_message_box.py  live.py  live_interactive_game.py  live_multi_view_change.py  live_open_platform_game.py  live_panel_change.py  live_panel_change_content.py  log_in_notice.py  messagebox_user_gain_medal.py  messagebox_user_medal_change.py  notice_msg.py  official_room_event.py  online_rank_count.py  online_rank_top3.py  online_rank_v2.py  (+29 more)
src/ublcli/: __init__.py  bhashm.py  danmakup.py  dump_raw.py  saver.py  strange_stalker.py  utils.py  wocpian.py
src/ubw/: __init__.py  utils.py  wocpian.py
src/ubw/actor/: __init__.py  actor.py  signalslot.py
src/ubw/app/: __init__.py  _base.py  downloader.py  favsync.py  full_connect.py  observer.py  simple.py
src/ubw/cli/: __init__.py  get_play_url.py
src/ubw/clients/: __init__.py  _b_base.py  _base.py  _livebase.py  _wsbase.py  bilibili.py  openlive.py  testing.py  wsweb.py
src/ubw/downloader/: __init__.py  _base.py  dynamic_downloader.py  video_downloader.py
src/ubw/handlers/: __init__.py  _base.py  bhashm.py  check_in_words.txt  danmakup.py  dump_raw.py  edge_collect.py  living_status.py  observe.py  saver.py  shark.py  strange_stalker.py  testing.py  vod.py  vodt.py  vodt.tcss  warn_nebd.py  wocpian.py
src/ubw/handlers/vod/: __init__.py  __main__.py
src/ubw/models/: __init__.py  _base.py  bilibili.py
src/ubw/models/blive/: __init__.py  _base.py  activity_banner_change.py  ad_game_card_refresh.py  ad_game_card_show.py  anchor_lot.py  anchor_lot_notice.py  change_room_info.py  chg_rank_refresh.py  cny_hot_rank.py  (+98 more)
src/ubw/push/: qmsg.py  serverchan.py
src/ubw/testing/: asyncstory.py  checkpoint.py  generate.py
src/ubw/ui/: __init__.py  _base.py  console.py  live.py  multi.py  richy.py  web.py
src/ubw/userdata/: __init__.py  paths.py
tests/blivedm/: test_models.py  test_models_with_history.py
tests/ubw/: test_main.py
tests/ubw/actor/: test_actor.py
tests/ubw/app/: test_observer.py  test_simple.py
tests/ubw/cli/: test_cli.py
tests/ubw/clients/: test_wsweb.py
tests/ubw/handlers/: danmu_msg_3_7_1_1_1_1.json  danmu_msg_emoticon_unique.json  test_danmakup.py  test_observer_handler.py  test_saver.py
tests/ubw/models/: danmu_msg.json  danmu_msg2.json  test_blive_base.py  test_main.py  test_models.py  test_models_blive_base.py
(+10 files in other folders)
