[tool.poetry]
name = "ubw"
version = "0.1.0"
description = ""
authors = ["Xu Siyuan <inqb@protonmail.com>"]
license = "MIT"
readme = "Readme.md"
packages = [
    { include = "ubw", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.11.0"
aiohttp = { version = "^3.8.3", extras = ["speedups"] }
aiofiles = "^22.1.0"
aiocsv = "^1.2.3"
rich = "^13.0.0"
pydantic = "^2.5.3"
toml = "^0.10.2"
sentry-sdk = "^1.16.0"
lxml = "^5.4.0"
typer = { extras = ["all"], version = "^0.9.0" }
textual = "^0.34.0"
jieba = "^0.42.1"
mpv = "^1.0.5"
tinydb = "^4.7.1"
tinydb-serialization = "^2.1.0"
aiotinydb = "^2.0.0"
pyinstaller = "^6.3.0"
pytest-asyncio = "^0.23.6"
bilibili-api-python = "^17.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
datamodel-code-generator = "^0.25.2"
textual-dev = "^1.1.0"
pdb-attach = "^3.0.0"
types-aiofiles = "^23.2.0.20240106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ubw = 'ubw.cli:app'
