[project]
name = "ubw"
version = "0.1.0"
description = ""
authors = [
    { name = "Xu Siyuan", email = "inqb@protonmail.com" }
]
license = { text = "MIT" }
readme = "Readme.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp[speedups] (>=3.13.3,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "aiocsv (>=1.3.2,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "sentry-sdk (>=2.53.0,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "typer[all] (>=0.20.0,<0.21.0)",
    "textual (>=6.8.0,<7.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "mpv (>=1.0.8,<2.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "tinydb-serialization (>=2.2.0,<3.0.0)",
    "aiotinydb (>=2.0.0,<3.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
    "bilibili-api-python (>=17.4.1,<18.0.0)",
    "esprima (>=4.0.1,<5.0.0)",
    "protobuf (>=3.20.0,<3.21.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "platformdirs (>=4.9.6,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
datamodel-code-generator = "^0.42.2"
textual-dev = "^1.7.0"
pdb-attach = "^3.0.1"
types-aiofiles = "^25.1.0.20251011"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ubw = 'ubw.cli:app'
